WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Contact__c/FleetEnrollment_Contact__c.object-meta.xml
<CustomObject>
    <label>Fleet Enrollment Contact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Fleet Enrollment Fleet Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Enrollment Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>